fix parts of dark mode

--- a/src/components/CatHomepage.css
+++ b/src/components/CatHomepage.css
@@ -6,19 +6,36 @@
     justify-content: center;
     height: 100vh;
   }
-  
+
+  .homepage-container.dark {
+    background-color: #444444;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+
   .homepage-header {
     font-size: 3rem;
     font-family: "Comic Sans MS", cursive, sans-serif;
     margin-bottom: 2rem;
   }
-  
+
+  .homepage-header.dark{
+    font-size: 3rem;
+    color: white;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    margin-bottom: 2rem;
+  }
+
   .homepage-images {
     display: flex;
     justify-content: center;
     margin-bottom: 2rem;
   }
-  
+
   .homepage-images img {
     width: 200px;
     height: 200px;
@@ -27,7 +44,7 @@
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
     animation: pulse 2s ease-in-out infinite;
   }
-  
+
   .homepage-button {
     font-size: 1.5rem;
     background-color: #343a40;
@@ -37,13 +54,13 @@
     text-decoration: none;
     transition: all 0.3s ease-in-out;
   }
-  
+
   .homepage-button:hover {
     background-color: #ffffff;
     color: #343a40;
     border: 2px solid #343a40;
   }
-  
+
   @keyframes pulse {
     0% {
       transform: scale(1);
@@ -55,4 +72,3 @@
       transform: scale(1);
     }
   }
-  
